{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 105,
  "lineage": "12d0e388-6236-1e60-ded6-36fc271b6cde",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "imdjango14",
                "enabled": true,
                "prefix": "frontend-alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:loadbalancer/app/alb14/e49f7cd315789a43",
            "arn_suffix": "app/alb14/e49f7cd315789a43",
            "dns_name": "alb14-186312383.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:496278789073:loadbalancer/app/alb14/e49f7cd315789a43",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb14",
            "security_groups": [
              "sg-07c883dc2e13f1f3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015b8492a1ca805da"
              },
              {
                "subnet_id": "subnet-03312bc1c107bf2aa"
              }
            ],
            "subnets": [
              "subnet-015b8492a1ca805da",
              "subnet-03312bc1c107bf2aa"
            ],
            "tags": {
              "Name": "alb14"
            },
            "vpc_id": "vpc-0172aca98d1f7ef55",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_s3_bucket.imdjango14",
            "aws_security_group.alb14",
            "aws_subnet.subnet14_1b",
            "aws_subnet.subnet14_1c",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:listener/app/alb14/e49f7cd315789a43/fc5aba9642ab7afb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:496278789073:listener/app/alb14/e49f7cd315789a43/fc5aba9642ab7afb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:loadbalancer/app/alb14/e49f7cd315789a43",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb14",
            "aws_alb_target_group.albtg14",
            "aws_s3_bucket.imdjango14",
            "aws_security_group.alb14",
            "aws_subnet.subnet14_1b",
            "aws_subnet.subnet14_1c",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "albtg14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02",
            "arn_suffix": "targetgroup/alb-target-group14/06210698e9fddd02",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group14",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Alb Target Group 14"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "albtg-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02-20200520114719558000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02",
            "target_id": "i-0cb6a0099154638c2"
          },
          "dependencies": [
            "aws_alb_target_group.albtg14",
            "aws_default_security_group.sg14",
            "aws_instance.imdjango_1b",
            "aws_security_group.imdjango",
            "aws_subnet.subnet14_1b",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "albtg-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02-20200520114716568800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:496278789073:targetgroup/alb-target-group14/06210698e9fddd02",
            "target_id": "i-0cd247a1341cf8fad"
          },
          "dependencies": [
            "aws_alb_target_group.albtg14",
            "aws_default_security_group.sg14",
            "aws_instance.imdjango_1c",
            "aws_security_group.imdjango",
            "aws_subnet.subnet14_1c",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "sg14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:496278789073:security-group/sg-06404f7de46a75763",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06404f7de46a75763",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "496278789073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg14"
            },
            "timeouts": null,
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "imdjango_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:496278789073:instance/i-0cb6a0099154638c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb6a0099154638c2",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "key14",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f27448ca1aed14bd",
            "private_dns": "ip-14-0-1-177.us-west-1.compute.internal",
            "private_ip": "14.0.1.177",
            "public_dns": "ec2-54-177-15-25.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.15.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09fd155247c739248",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015b8492a1ca805da",
            "tags": {
              "Name": "imdjango_1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01f5017d1c7aa1e7e",
              "sg-06404f7de46a75763"
            ]
          },
          "dependencies": [
            "aws_default_security_group.sg14",
            "aws_security_group.imdjango",
            "aws_subnet.subnet14_1b",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "imdjango_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:496278789073:instance/i-0cd247a1341cf8fad",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd247a1341cf8fad",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "key14",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0590fc9cdb6a5c6d4",
            "private_dns": "ip-14-0-2-48.us-west-1.compute.internal",
            "private_ip": "14.0.2.48",
            "public_dns": "ec2-54-67-56-115.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.56.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-077ba7359d829a83f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03312bc1c107bf2aa",
            "tags": {
              "Name": "imdjango_1c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01f5017d1c7aa1e7e",
              "sg-06404f7de46a75763"
            ]
          },
          "dependencies": [
            "aws_default_security_group.sg14",
            "aws_security_group.imdjango",
            "aws_subnet.subnet14_1c",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e1365f44bf619973",
            "owner_id": "496278789073",
            "tags": {
              "Name": "gateway14"
            },
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e8e06d90656a16e",
            "owner_id": "496278789073",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0e1365f44bf619973",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              },
              {
                "cidr_block": "114.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0e02c11494378a38c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt14"
            },
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_internet_gateway.gateway14",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r14_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028ecd39b90901a1e",
            "route_table_id": "rtb-01e8e06d90656a16e",
            "subnet_id": "subnet-03312bc1c107bf2aa"
          },
          "dependencies": [
            "aws_internet_gateway.gateway14",
            "aws_route_table.rt14",
            "aws_subnet.subnet14_1c",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt14_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e802b80968e838f",
            "route_table_id": "rtb-01e8e06d90656a16e",
            "subnet_id": "subnet-015b8492a1ca805da"
          },
          "dependencies": [
            "aws_internet_gateway.gateway14",
            "aws_route_table.rt14",
            "aws_subnet.subnet14_1b",
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:496278789073:security-group/sg-07c883dc2e13f1f3e",
            "description": "open HTTP port for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c883dc2e13f1f3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb14",
            "name_prefix": null,
            "owner_id": "496278789073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imdjango",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:496278789073:security-group/sg-01f5017d1c7aa1e7e",
            "description": "open ssh port for imdjango",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f5017d1c7aa1e7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "imdjango",
            "name_prefix": null,
            "owner_id": "496278789073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "imdjango"
            },
            "timeouts": null,
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet14_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:496278789073:subnet/subnet-015b8492a1ca805da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "14.0.1.0/24",
            "id": "subnet-015b8492a1ca805da",
            "map_public_ip_on_launch": false,
            "owner_id": "496278789073",
            "tags": {
              "Name": "subnet14_1b"
            },
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet14_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:496278789073:subnet/subnet-03312bc1c107bf2aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "14.0.2.0/24",
            "id": "subnet-03312bc1c107bf2aa",
            "map_public_ip_on_launch": false,
            "owner_id": "496278789073",
            "tags": {
              "Name": "subnet14_1c"
            },
            "vpc_id": "vpc-0172aca98d1f7ef55"
          },
          "dependencies": [
            "aws_vpc.vpc14"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc14",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:496278789073:vpc/vpc-0172aca98d1f7ef55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "14.0.0.0/16",
            "default_network_acl_id": "acl-019b0c91a6bc67c07",
            "default_route_table_id": "rtb-02a2e1c2d626804fa",
            "default_security_group_id": "sg-06404f7de46a75763",
            "dhcp_options_id": "dopt-0a3fd38b420a041aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0172aca98d1f7ef55",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02a2e1c2d626804fa",
            "owner_id": "496278789073",
            "tags": {
              "Name": "vpc14"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "imdjango_peering",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e02c11494378a38c",
            "peer_owner_id": "496278789073",
            "peer_region": "eu-west-3",
            "peer_vpc_id": "vpc-0a95c246608840d94",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "vpc14 peering region between California and Paris"
            },
            "vpc_id": "vpc-0172aca98d1f7ef55"
          }
        }
      ]
    }
  ]
}